--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "private": true,  
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -18,7 +18,10 @@
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.8.3",
+    "w": "^2.3.1",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +52,4 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3"
   }
-  
 }
