--- a/backend/socket-server/package.json
+++ b/backend/socket-server/package.json
@@ -11,6 +11,8 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@socket.io/cluster-adapter": "^0.3.0",
+    "express": "^5.2.1",
     "redis": "^5.10.0",
     "socket.io": "^4.8.3"
   }
