--- a/backend/socket-server/package.json
+++ b/backend/socket-server/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@socket.io/cluster-adapter": "^0.3.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "redis": "^5.10.0",
     "socket.io": "^4.8.3"
