--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,11 @@ RUN npm ci
 
 COPY . .
 
-ENV REACT_APP_BACKEND_URL=http://54.206.119.98:5000
+ARG REACT_APP_BACKEND_URL
+ARG REACT_APP_BACKEND_SOCKET_URL
+
+ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
+ENV REACT_APP_BACKEND_SOCKET_URL=$REACT_APP_BACKEND_SOCKET_URL
 
 EXPOSE 3000
 CMD ["npm", "start"]
