--- a/backend/socket-server/Dockerfile
+++ b/backend/socket-server/Dockerfile
@@ -6,6 +6,14 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 4040
+ARG FRONTEND_ORIGIN
+ARG REDIS_URL
+ARG SOCKET_PORT
+
+ENV FRONTEND_ORIGIN=$FRONTEND_ORIGIN
+ENV REDIS_URL=$REDIS_URL
+ENV SOCKET_PORT=$SOCKET_PORT
+
+EXPOSE 5001
 
 CMD ["node", "main.js"]
